Sun Nov 15 14:02:11 GMT 2009  Colin Watson  <cjwatson@debian.org>

	Search man<sec><ext> directories in the GNU layout (Debian bug
	#519807, Arch Linux bug #13734).

	* src/globbing.c (match_in_directory): Optionally take allocated
	  count from caller. If it's non-zero, don't clear the glob.
	  (look_for_file): In the GNU layout, search all subdirectories of
	  hier that begin with the first character of the section.
	* NEWS: Document this.

Sun Nov 15 13:32:58 GMT 2009  Colin Watson  <cjwatson@debian.org>

	* src/globbing.c (match_in_directory): Make this void; checking
	  whether any glob matches were returned is sufficient. Move
	  glob-clearing code to ...
	  (clear_glob): ... here (new function).
	  (look_for_file): Simplify since we now only need to check
	  gbuf.gl_pathc == 0, not the return value of match_in_directory as
	  well. Clear gbuf on entry.

Sun Nov 15 13:18:38 GMT 2009  Colin Watson  <cjwatson@debian.org>

	* src/tests/lexgrog-1, src/tests/man-1, src/tests/manconv-1,
	  src/tests/manconv-2, src/tests/mandb-1, src/tests/mandb-2: Use
	  'diff -u', which produces more helpful output on failures.

Sat Nov 14 20:10:57 GMT 2009  Colin Watson  <cjwatson@debian.org>

	* README (System specific notes): Remove entirely. The notes about
	  Linux here only pertain to thoroughly obsolete systems.

Sat Nov 14 20:08:40 GMT 2009  Colin Watson  <cjwatson@debian.org>

	* configure.ac: Handle Ultrix-4.3a -YPOSIX requirement
	  automatically.
	* README (System specific notes): Remove note about Ultrix-4.3a.

Sat Nov 14 19:14:02 GMT 2009  Colin Watson  <cjwatson@debian.org>

	* lib/README: Copyright is not the same as licensing; fix confusion.

Sat Nov 14 18:57:42 GMT 2009  Colin Watson  <cjwatson@debian.org>

	* src/man.c (options): Add --nh and --nj aliases for
	  --no-hyphenation and --no-justification respectively.
	* man/man1/man.man1 (Controlling formatted output): Document new
	  aliases.

Sat Nov 14 18:52:15 GMT 2009  Colin Watson  <cjwatson@debian.org>
